--- a/Prevu.Synoptics.V3923_Evanses/Details/D020.xaml
+++ b/Prevu.Synoptics.V3923_Evanses/Details/D020.xaml
@@ -10,113 +10,119 @@
              d:Background="{DynamicResource MaterialDesignPaper}"
              x:Class="Prevu.Synoptics.D020" >
 
-    <Canvas Height="464" Width="647">
-        <Labels:Pipe Width="28" StatusComponent="020-01-MA1" RenderTransformOrigin="0.5,0.5" Color="Oil" Canvas.Left="239" Canvas.Top="214" HorizontalAlignment="Center" VerticalAlignment="Top">
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <RotateTransform Angle="90"/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
-        <Labels:Pipe Width="28" StatusComponent="020-01-MA1" RenderTransformOrigin="0.5,0.5" Color="Oil" Canvas.Left="571" Canvas.Top="214" HorizontalAlignment="Center" VerticalAlignment="Top">
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <RotateTransform Angle="90"/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
-        <Labels:Pipe Width="168" StatusComponent="020-01-MA1" RenderTransformOrigin="0.5,0.5" Color="Oil" Canvas.Left="333" Canvas.Top="308" HorizontalAlignment="Center" VerticalAlignment="Top">
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <RotateTransform Angle="90"/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="62" StatusComponent="020-01-MA1" RenderTransformOrigin="0.5,0.5" Color="Oil" Canvas.Left="326" Canvas.Top="196">
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <RotateTransform Angle="90"/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
-        <Labels:Pipe Width="64" StatusComponent="020-01-MA1" RenderTransformOrigin="0.5,0.5" Color="Oil" Canvas.Left="445" Canvas.Top="195" HorizontalAlignment="Center" VerticalAlignment="Top">
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <RotateTransform Angle="90"/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
-        <Labels:Pipe Width="336" StatusComponent="020-01-MA1" RenderTransformOrigin="0.5,0.5" Color="Oil" Canvas.Left="251" Canvas.Top="226" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:Pipe Width="171" RenderTransformOrigin="0.5,0.5" Color="Oil" StatusComponent="373-01-MA1" Canvas.Left="104" Canvas.Top="282" HorizontalAlignment="Center" VerticalAlignment="Top" Icon="Right">
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <RotateTransform Angle="90"/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
-        <Labels:Pipe Width="173" RenderTransformOrigin="0.5,0.5" Color="Oil" StatusComponent="373-01-MA1" Canvas.Left="54" Canvas.Top="291" HorizontalAlignment="Center" VerticalAlignment="Top">
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <RotateTransform Angle="90"/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
-        <Labels:Pipe Color="Water" Width="51" StatusComponent="354-21-CV1" RenderTransformOrigin="0.5,0.5" Canvas.Left="74" Canvas.Top="266" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Rectangle Height="2" Stroke="Black" Width="54" Canvas.Left="423" Canvas.Top="273" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Ellipse Height="16" Stroke="#FFBDBDBD" Width="16" OpacityMask="#FFBDBDBD" Fill="{DynamicResource {x:Static SystemColors.AppWorkspaceBrushKey}}" Canvas.Left="409" Canvas.Top="266" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Machines:V01_CV_ValveDouble Canvas.Left="327" Canvas.Top="137" Height="44" Width="62" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Machines:V01_WaterPump Canvas.Left="392" Canvas.Top="304" Color="Oil" Height="50" Width="50" HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5">
-            <Machines:V01_WaterPump.RenderTransform>
-                <TransformGroup>
-                    <RotateTransform Angle="-90"/>
-                </TransformGroup>
-            </Machines:V01_WaterPump.RenderTransform>
-        </Machines:V01_WaterPump>
-        <Rectangle HorizontalAlignment="Center" Height="86" VerticalAlignment="Top" Width="376" Fill="Gray" RadiusX="15" RadiusY="15" Canvas.Left="102" Canvas.Top="367"/>
-        <Machines:V01_SCW_ScrewConveyor_straight Canvas.Left="223" Canvas.Top="392" HorizontalAlignment="Center" VerticalAlignment="Top" Width="68" Height="20" RenderTransformOrigin="0.5,0.5">
-            <Machines:V01_SCW_ScrewConveyor_straight.RenderTransform>
-                <TransformGroup>
-                    <RotateTransform Angle="-90"/>
-                </TransformGroup>
-            </Machines:V01_SCW_ScrewConveyor_straight.RenderTransform>
-        </Machines:V01_SCW_ScrewConveyor_straight>
-        <Machines:CV_Valve_001 Height="50" Width="50" Color="Water" RenderTransformOrigin="0.51,0.539" Canvas.Left="29" Canvas.Top="240" HorizontalAlignment="Center" VerticalAlignment="Top">
-            <Machines:CV_Valve_001.RenderTransform>
-                <TransformGroup>
-                    <RotateTransform Angle="180"/>
-                </TransformGroup>
-            </Machines:CV_Valve_001.RenderTransform>
-        </Machines:CV_Valve_001>
-        <Machines:EXC_HeatExchanger RenderTransformOrigin="0.5,0.5" Width="40" Height="40" Canvas.Left="121" Canvas.Top="249" HorizontalAlignment="Center" VerticalAlignment="Top">
-            <Machines:EXC_HeatExchanger.RenderTransform>
-                <TransformGroup>
-                    <RotateTransform Angle="90"/>
-                </TransformGroup>
-            </Machines:EXC_HeatExchanger.RenderTransform>
-        </Machines:EXC_HeatExchanger>
-        <Machines:V01_WaterPump Canvas.Left="119" Canvas.Top="309" Color="Oil" Height="40" Width="40" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
-            <Machines:V01_WaterPump.RenderTransform>
-                <TransformGroup>
-                    <RotateTransform Angle="-90"/>
-                </TransformGroup>
-            </Machines:V01_WaterPump.RenderTransform>
-        </Machines:V01_WaterPump>
-        <Machines:V01_CV_ValveDouble Canvas.Left="446" Canvas.Top="137" Height="44" Width="62" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Machines:V01_HydraulicAccumulator Canvas.Left="242" Canvas.Top="173" Height="50" Width="22" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Machines:V01_HydraulicAccumulator Canvas.Left="574" Canvas.Top="173" Height="50" Width="22" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Rectangle Height="6" Stroke="Black" Width="33" Fill="#FFBDBDBD" RenderTransformOrigin="0.5,0.5" Canvas.Left="124" Canvas.Top="207" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Rectangle Height="6" Stroke="Black" Width="34" Fill="#FFBDBDBD" RenderTransformOrigin="0.5,0.5" Canvas.Left="173" Canvas.Top="207" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:DeviceLabel ComponentName="020-23-CV1" Canvas.Left="12" Canvas.Top="195" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:DeviceLabel ComponentName="020-02-MA1" HorizontalAlignment="Center" VerticalAlignment="Top" Canvas.Left="20" Canvas.Top="304"/>
-        <Labels:DeviceLabel ComponentName="020-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Top" Canvas.Left="290" Canvas.Top="304"/>
-        <Labels:DeviceLabel ComponentName="020-11-R1" HorizontalAlignment="Center" VerticalAlignment="Top" Canvas.Left="145" Canvas.Top="384"/>
-        <Labels:DeviceLabel ComponentName="020-42-TT1" HorizontalAlignment="Center" VerticalAlignment="Top" Canvas.Left="307" Canvas.Top="384"/>
-        <Labels:DeviceLabel ComponentName="020-21-CV1" Canvas.Left="313" Canvas.Top="77" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:DeviceLabel ComponentName="020-21-PT1" Canvas.Left="313" Canvas.Top="13" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:DeviceLabel ComponentName="020-45-CS1" Canvas.Left="449" Canvas.Top="249" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:DeviceLabel ComponentName="020-22-CV1" Canvas.Left="432" Canvas.Top="77" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:DeviceLabel ComponentName="020-22-PT1" Canvas.Left="432" Canvas.Top="13" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:DeviceLabel ComponentName="020-21-CV3" Canvas.Left="208" Canvas.Top="115" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:DeviceLabel ComponentName="020-22-CV3" Canvas.Left="540" Canvas.Top="115" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-    </Canvas>
+  <Canvas Height="562" Width="672">
+    <Rectangle Height="2" Stroke="Black" Width="54" Canvas.Left="493" Canvas.Top="225" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Rectangle Height="2" Stroke="Black" Width="54" Canvas.Left="493" Canvas.Top="155" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Rectangle Height="2" Stroke="Black" Width="54" Canvas.Left="307" Canvas.Top="155" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Rectangle Height="2" Stroke="Black" Width="54" Canvas.Left="307" Canvas.Top="224" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Labels:Pipe Width="28" StatusComponent="020-01-MA1" RenderTransformOrigin="0.5,0.5" Color="Oil" Canvas.Left="249" Canvas.Top="304" HorizontalAlignment="Left" VerticalAlignment="Center">
+      <Labels:Pipe.RenderTransform>
+        <TransformGroup>
+          <RotateTransform Angle="90"/>
+        </TransformGroup>
+      </Labels:Pipe.RenderTransform>
+    </Labels:Pipe>
+    <Labels:Pipe Width="28" StatusComponent="020-01-MA1" RenderTransformOrigin="0.5,0.5" Color="Oil" Canvas.Left="577" Canvas.Top="304" HorizontalAlignment="Left" VerticalAlignment="Center">
+      <Labels:Pipe.RenderTransform>
+        <TransformGroup>
+          <RotateTransform Angle="90"/>
+        </TransformGroup>
+      </Labels:Pipe.RenderTransform>
+    </Labels:Pipe>
+    <Labels:Pipe Width="168" StatusComponent="020-01-MA1" RenderTransformOrigin="0.5,0.5" Color="Oil" Canvas.Left="343" Canvas.Top="398" HorizontalAlignment="Left" VerticalAlignment="Center">
+      <Labels:Pipe.RenderTransform>
+        <TransformGroup>
+          <RotateTransform Angle="90"/>
+        </TransformGroup>
+      </Labels:Pipe.RenderTransform>
+    </Labels:Pipe>
+    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="198" StatusComponent="020-01-MA1" RenderTransformOrigin="0.5,0.5" Color="Oil" Canvas.Left="262" Canvas.Top="218">
+      <Labels:Pipe.RenderTransform>
+        <TransformGroup>
+          <RotateTransform Angle="90"/>
+        </TransformGroup>
+      </Labels:Pipe.RenderTransform>
+    </Labels:Pipe>
+    <Labels:Pipe Width="202" StatusComponent="020-01-MA1" RenderTransformOrigin="0.5,0.5" Color="Oil" Canvas.Left="392" Canvas.Top="216" HorizontalAlignment="Left" VerticalAlignment="Center">
+      <Labels:Pipe.RenderTransform>
+        <TransformGroup>
+          <RotateTransform Angle="90"/>
+        </TransformGroup>
+      </Labels:Pipe.RenderTransform>
+    </Labels:Pipe>
+    <Labels:Pipe Width="332" StatusComponent="020-01-MA1" RenderTransformOrigin="0.5,0.5" Color="Oil" Canvas.Left="261" Canvas.Top="316" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Labels:Pipe Width="173" RenderTransformOrigin="0.5,0.5" Color="Oil" StatusComponent="020-02-MA1" Canvas.Left="77" Canvas.Top="381" HorizontalAlignment="Left" VerticalAlignment="Center">
+      <Labels:Pipe.RenderTransform>
+        <TransformGroup>
+          <RotateTransform Angle="90"/>
+        </TransformGroup>
+      </Labels:Pipe.RenderTransform>
+    </Labels:Pipe>
+    <Labels:Pipe Color="Water" Width="75" StatusComponent="020-23-CV1" RenderTransformOrigin="0.5,0.5" Canvas.Left="94" Canvas.Top="356" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Machines:V01_CV_ValveDouble Canvas.Left="330" Canvas.Top="84" Height="44" Width="62" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Machines:V01_WaterPump Canvas.Left="402" Canvas.Top="392" Color="Oil" Height="53" Width="51" HorizontalAlignment="Left" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5">
+      <Machines:V01_WaterPump.RenderTransform>
+        <TransformGroup>
+          <ScaleTransform/>
+          <SkewTransform/>
+          <RotateTransform Angle="-90.825"/>
+          <TranslateTransform/>
+        </TransformGroup>
+      </Machines:V01_WaterPump.RenderTransform>
+    </Machines:V01_WaterPump>
+    <Rectangle HorizontalAlignment="Left" Height="86" VerticalAlignment="Center" Width="476" Fill="Gray" RadiusX="15" RadiusY="15" Canvas.Left="112" Canvas.Top="457"/>
+    <Machines:V01_SCW_ScrewConveyor_straight Canvas.Left="233" Canvas.Top="482" HorizontalAlignment="Left" VerticalAlignment="Center" Width="68" Height="20" RenderTransformOrigin="0.5,0.5">
+      <Machines:V01_SCW_ScrewConveyor_straight.RenderTransform>
+        <TransformGroup>
+          <RotateTransform Angle="-90"/>
+        </TransformGroup>
+      </Machines:V01_SCW_ScrewConveyor_straight.RenderTransform>
+    </Machines:V01_SCW_ScrewConveyor_straight>
+    <Machines:CV_Valve_001 Height="50" Width="50" Color="Water" RenderTransformOrigin="0.51,0.539" Canvas.Left="51" Canvas.Top="330" HorizontalAlignment="Left" VerticalAlignment="Center">
+      <Machines:CV_Valve_001.RenderTransform>
+        <TransformGroup>
+          <RotateTransform Angle="180"/>
+        </TransformGroup>
+      </Machines:CV_Valve_001.RenderTransform>
+    </Machines:CV_Valve_001>
+    <Machines:EXC_HeatExchanger RenderTransformOrigin="0.5,0.5" Width="40" Height="40" Canvas.Left="144" Canvas.Top="339" HorizontalAlignment="Left" VerticalAlignment="Center">
+      <Machines:EXC_HeatExchanger.RenderTransform>
+        <TransformGroup>
+          <RotateTransform Angle="90"/>
+        </TransformGroup>
+      </Machines:EXC_HeatExchanger.RenderTransform>
+    </Machines:EXC_HeatExchanger>
+    <Machines:V01_WaterPump Canvas.Left="144" Canvas.Top="401" Color="Oil" Height="37" Width="39" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
+      <Machines:V01_WaterPump.RenderTransform>
+        <TransformGroup>
+          <ScaleTransform/>
+          <SkewTransform/>
+          <RotateTransform Angle="-90.575"/>
+          <TranslateTransform/>
+        </TransformGroup>
+      </Machines:V01_WaterPump.RenderTransform>
+    </Machines:V01_WaterPump>
+    <Machines:V01_CV_ValveDouble Canvas.Left="462" Canvas.Top="84" Height="44" Width="62" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Machines:V01_HydraulicAccumulator Canvas.Left="252" Canvas.Top="267" Height="50" Width="22" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Machines:V01_HydraulicAccumulator Canvas.Left="580" Canvas.Top="267" Height="50" Width="22" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Rectangle Height="6" Stroke="Black" Width="33" Fill="#FFBDBDBD" RenderTransformOrigin="0.5,0.5" Canvas.Left="147" Canvas.Top="297" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Labels:DeviceLabel ComponentName="020-23-CV1" Canvas.Left="34" Canvas.Top="282" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Labels:DeviceLabel ComponentName="020-02-MA1" HorizontalAlignment="Left" VerticalAlignment="Center" Canvas.Left="34" Canvas.Top="394"/>
+    <Labels:DeviceLabel ComponentName="020-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center" Canvas.Left="305" Canvas.Top="394"/>
+    <Labels:DeviceLabel ComponentName="020-11-R1" HorizontalAlignment="Left" VerticalAlignment="Center" Canvas.Left="155" Canvas.Top="474"/>
+    <Labels:DeviceLabel ComponentName="020-42-TT1" HorizontalAlignment="Left" VerticalAlignment="Center" Canvas.Left="305" Canvas.Top="474"/>
+    <Labels:DeviceLabel ComponentName="020-21-CV1" Canvas.Left="316" Canvas.Top="26" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Labels:DeviceLabel ComponentName="020-21-PT1" Canvas.Left="246" Canvas.Top="133" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Labels:DeviceLabel ComponentName="020-22-CV1" Canvas.Left="448" Canvas.Top="26" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Labels:DeviceLabel ComponentName="020-22-PT1" Canvas.Left="518" Canvas.Top="133" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Labels:DeviceLabel ComponentName="020-01-CV1" Canvas.Left="218" Canvas.Top="328" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Labels:DeviceLabel ComponentName="020-01-CV2" Canvas.Left="546" Canvas.Top="328" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Ellipse Height="16" Stroke="#FFBDBDBD" Width="16" OpacityMask="#FFBDBDBD" Fill="{DynamicResource {x:Static SystemColors.AppWorkspaceBrushKey}}" Canvas.Left="353" Canvas.Top="148" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Ellipse Height="16" Stroke="#FFBDBDBD" Width="16" OpacityMask="#FFBDBDBD" Fill="{DynamicResource {x:Static SystemColors.AppWorkspaceBrushKey}}" Canvas.Left="485" Canvas.Top="148" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Ellipse Height="16" Stroke="#FFBDBDBD" Width="16" OpacityMask="#FFBDBDBD" Fill="{DynamicResource {x:Static SystemColors.AppWorkspaceBrushKey}}" Canvas.Left="353" Canvas.Top="217" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Ellipse Height="16" Stroke="#FFBDBDBD" Width="16" OpacityMask="#FFBDBDBD" Fill="{DynamicResource {x:Static SystemColors.AppWorkspaceBrushKey}}" Canvas.Left="485" Canvas.Top="217" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Labels:DeviceLabel ComponentName="020-45-CT2" Canvas.Left="456" Canvas.Top="474" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Labels:DeviceLabel ComponentName="020-21-TS1" Canvas.Left="246" Canvas.Top="200" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Labels:DeviceLabel ComponentName="020-22-TS1" Canvas.Left="518" Canvas.Top="200" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+  </Canvas>
 </UserControl>
