--- a/Prevu.Synoptics.V3168_Sirplaste/Pages/P880.xaml
+++ b/Prevu.Synoptics.V3168_Sirplaste/Pages/P880.xaml
@@ -12,7 +12,17 @@
              x:Class="Prevu.Synoptics.P880" mc:Ignorable="d"
              Height="850" Width="1550" d:Background="{DynamicResource MaterialDesignPaper}">
   <Canvas>
-    <Labels:Pipe Width="70" RenderTransformOrigin="0.5,0.5" StatusComponent="898-01-MA1" Height="24" Canvas.Left="1030" Canvas.Top="786" Color="Air" HorizontalAlignment="Left" VerticalAlignment="Center">
+    <Labels:Pipe Width="72" StatusComponent="945-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="1088" Canvas.Top="672" Color="ByProduct" HorizontalAlignment="Left" VerticalAlignment="Center">
+      <Labels:Pipe.RenderTransform>
+        <TransformGroup>
+          <ScaleTransform/>
+          <SkewTransform/>
+          <RotateTransform Angle="90"/>
+          <TranslateTransform/>
+        </TransformGroup>
+      </Labels:Pipe.RenderTransform>
+    </Labels:Pipe>
+    <Labels:Pipe Width="70" RenderTransformOrigin="0.5,0.5" StatusComponent="898-01-MA1" Height="24" Canvas.Left="1034" Canvas.Top="786" Color="Air" HorizontalAlignment="Left" VerticalAlignment="Center">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -52,7 +62,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="118" StatusComponent="870-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="10" Canvas.Left="168" Canvas.Top="130" VisibilityComponent="892-21-CV1" VisibilitySignal="MAT2">
+    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="118" StatusComponent="941-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="10" Canvas.Left="168" Canvas.Top="130" VisibilityComponent="" VisibilitySignal="">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -62,7 +72,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="93" StatusComponent="870-01-MA1" PipeHeight="Medium" Canvas.Left="139" Canvas.Top="74" VisibilityComponent="892-21-CV1" VisibilitySignal="MAT2"/>
+    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="93" StatusComponent="941-01-MA1" PipeHeight="Medium" Canvas.Left="139" Canvas.Top="74" VisibilityComponent="" VisibilitySignal=""/>
     <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="89" RenderTransformOrigin="0.5,0.5" StatusComponent="888-01-MA1" PipeHeight="Medium" Height="24" Canvas.Left="696" Canvas.Top="786">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
@@ -83,7 +93,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="62" RenderTransformOrigin="0.5,0.5" StatusComponent="896-01-MA1" PipeHeight="Medium" Height="18" Canvas.Left="1083" Canvas.Top="752">
+    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="62" RenderTransformOrigin="0.5,0.5" StatusComponent="896-01-MA1" PipeHeight="Medium" Height="18" Canvas.Left="1087" Canvas.Top="752">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -93,7 +103,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="83" StatusComponent="898-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="10" Canvas.Left="1131" Canvas.Top="793">
+    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="136" StatusComponent="898-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="10" Canvas.Left="1135" Canvas.Top="793">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -368,9 +378,9 @@
     </Labels:Pipe>
     <Labels:Pipe Width="172" StatusComponent="890-01-ECS3" RenderTransformOrigin="0.5,0.5" Canvas.Left="786" Canvas.Top="426" Color="ByProduct" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Machines:V01_VS_Airlock Canvas.Left="650" Canvas.Top="686" Height="60" Width="64" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-    <Machines:V01_VS_Airlock Canvas.Left="1082" Canvas.Top="686" Height="60" Width="64" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Machines:V01_VS_Airlock Canvas.Left="1086" Canvas.Top="686" Height="60" Width="64" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Machines:V01_ScarpaTrasporto Canvas.Left="650" Canvas.Top="768" Height="39" Width="67" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-    <Machines:V01_ScarpaTrasporto Canvas.Left="1084" Canvas.Top="768" Height="39" Width="67" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Machines:V01_ScarpaTrasporto Canvas.Left="1088" Canvas.Top="768" Height="39" Width="67" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Machines:V01_FKS_FlakesSorter_SingleCH Canvas.Left="191" Canvas.Top="165" Height="280" Width="130" HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5">
       <Machines:V01_FKS_FlakesSorter_SingleCH.RenderTransform>
         <TransformGroup>
@@ -393,7 +403,7 @@
     <Machines:V01_ScarpaTrasporto Canvas.Left="764" Canvas.Top="542" Height="34" Width="54" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Machines:V01_VT_CMM_Blower_Air_Compressor Canvas.Left="684" Canvas.Top="548" Height="40" Width="40" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Machines:V01_VT_CMM_Blower_Air_Compressor Canvas.Left="1251" Canvas.Top="545" HorizontalAlignment="Center" VerticalAlignment="Top" Height="40" Width="40"/>
-    <Machines:V01_VT_CMM_Blower_Air_Compressor Canvas.Left="1006" Canvas.Top="772" HorizontalAlignment="Center" VerticalAlignment="Top" Height="52" Width="48"/>
+    <Machines:V01_VT_CMM_Blower_Air_Compressor Canvas.Left="1010" Canvas.Top="772" HorizontalAlignment="Left" VerticalAlignment="Center" Height="52" Width="48"/>
     <Machines:V01_VT_CMM_Blower_Air_Compressor Canvas.Left="574" Canvas.Top="772" HorizontalAlignment="Center" VerticalAlignment="Top" Height="52" Width="48"/>
     <Machines:V01_VT_CMM_Blower_Air_Compressor Canvas.Left="294" Canvas.Top="609" HorizontalAlignment="Center" VerticalAlignment="Top" Height="40" Width="40"/>
     <Machines:V01_VT_CMM_Blower_Air_Compressor Canvas.Left="117" Canvas.Top="719" HorizontalAlignment="Center" VerticalAlignment="Top" Height="40" Width="40"/>
@@ -401,13 +411,13 @@
     <Labels:JumpLabel HorizontalAlignment="Left" 
             VerticalAlignment="Center" 
             JumpFromLabel="880-61-LEV" 
-            JumpToLabel="892-21-CV1" Canvas.Left="72" Canvas.Top="44"/>
+            JumpToLabel="941-01-MA1" Canvas.Left="72" Canvas.Top="44"/>
     <Labels:JumpLabel 
             JumpFromLabel="888-01-MA1" 
             JumpToLabel="894-21-CV1" Canvas.Left="763" Canvas.Top="763" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Labels:JumpLabel 
             JumpFromLabel="898-01-MA1" 
-            JumpToLabel="998-BAGS" Canvas.Left="1194" Canvas.Top="763" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+            JumpToLabel="998-BAGS" Canvas.Left="1239" Canvas.Top="763" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Labels:JumpLabel 
             JumpFromLabel="904-01-MA1" 
             JumpToLabel="920-62-LEV" Canvas.Left="870" Canvas.Top="534" HorizontalAlignment="Left" VerticalAlignment="Top"/>
@@ -438,9 +448,9 @@
             ComponentName="886-01-MA1" Canvas.Left="718" Canvas.Top="691"/>
     <Labels:DeviceLabel HorizontalAlignment="Left" 
             VerticalAlignment="Center" 
-            ComponentName="896-01-MA1" Canvas.Left="1149" Canvas.Top="691"/>
+            ComponentName="896-01-MA1" Canvas.Left="1153" Canvas.Top="691"/>
     <Labels:DeviceLabel 
-            ComponentName="898-01-MA1" Canvas.Left="985" Canvas.Top="718" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+            ComponentName="898-01-MA1" Canvas.Left="989" Canvas.Top="718" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Labels:DeviceLabel 
             ComponentName="885-01-MA1" Canvas.Left="92" Canvas.Top="769" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Labels:DeviceLabel 
@@ -458,14 +468,27 @@
     <Labels:DeviceLabel 
             ComponentName="890-61-LEV" Canvas.Left="946" Canvas.Top="164" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Labels:DeviceLabel 
-            ComponentName="914-01-MA1" Canvas.Left="1226" Canvas.Top="595" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+            ComponentName="914-01-MA1" Canvas.Left="1156" Canvas.Top="540" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Labels:DeviceLabel 
-            ComponentName="912-01-MA1" Canvas.Left="1239" Canvas.Top="472" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+            ComponentName="912-01-MA1" Canvas.Left="1239" Canvas.Top="472" HorizontalAlignment="Center" VerticalAlignment="Center"/>
     <Labels:DeviceLabel 
             ComponentName="904-01-MA1" Canvas.Left="583" Canvas.Top="544" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:DeviceLabel 
             ComponentName="902-01-MA1" Canvas.Left="672" Canvas.Top="475" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:DeviceLabel 
             ComponentName="880-61-LEV" Canvas.Left="186" Canvas.Top="206" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+    <Labels:Pipe Width="132" RenderTransformOrigin="0.5,0.5" StatusComponent="945-01-MA1" Canvas.Left="1122" Canvas.Top="638" Color="ByProduct" HorizontalAlignment="Left" VerticalAlignment="Center">
+      <Labels:Pipe.RenderTransform>
+        <TransformGroup>
+          <ScaleTransform/>
+          <SkewTransform/>
+          <RotateTransform Angle="0"/>
+          <TranslateTransform/>
+        </TransformGroup>
+      </Labels:Pipe.RenderTransform>
+    </Labels:Pipe>
+    <Labels:JumpLabel 
+      JumpFromLabel="896-01-MA1" 
+      JumpToLabel="945-01-MA1" Canvas.Left="1239" Canvas.Top="606" Direction="Left" HorizontalAlignment="Left" VerticalAlignment="Center"/>
   </Canvas>
 </UserControl>
